# laser-rag

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_users.py
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: __init__.py  auth.py  conversations.py  deps.py  documents.py  jobs.py  search.py  stats.py
backend/app/auth/: __init__.py  passwords.py  repository.py  service.py  tokens.py
backend/app/chat/: __init__.py  catalog.py  engine.py  events.py  factory.py  history.py  models.py  repository.py  retrieval.py
backend/app/core/: config.py  constants.py  logging.py  time.py
backend/app/db/: chroma_backend.py  conversation_repository.py  document_catalog.py  document_repository.py  embedder.py  models.py  pg_manager.py  session.py  stats_repository.py  user_repository.py
backend/app/domain/: chroma_indexer.py  constants.py  database_manager.py  document_analyzer.py  document_splitter.py  enums.py  language.py  metadata_extractor.py  models.py  pipeline.py  protocols.py  text_extractor.py
backend/app/errors/: domain.py
backend/app/llm/: __init__.py  client.py
backend/app/prompts/: __init__.py  chat.py  metadata.py
backend/app/queue/: __init__.py  factory.py  jobs.py  queue.py  runner.py  store.py
backend/app/schemas/: __init__.py  auth.py  chat.py  documents.py  search.py  stats.py
backend/app/validators/: __init__.py  (+1 more)
backend/tests/: test_auth.py  test_chat_engine.py  test_conversations_api.py  test_documents_api.py  test_health.py  test_llm_client.py  test_pg_database_manager.py  test_pipeline_smoke.py  test_stage_runner.py
(+17 files in other folders)
