[project]
name = "laserrag-backend"
version = "0.1.0"
description = "LaserRAG — RAG system over laser-cladding scientific literature (FastAPI backend)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web / API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.3",
    # Settings / validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Database (PostgreSQL, async)
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Queue
    "arq>=0.26.0",
    "redis>=5.0.0",
    # Vector DB + embeddings
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # LLM
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    # Document extraction (domain modules, Phase 1)
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "odfpy>=1.4.1",
    # Auth
    "pyjwt>=2.9.0",
    "passlib[argon2]>=1.7.4",
    # Logging
    "structlog>=24.4.0",
    # Rate limiting
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
